--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,5 +1,5 @@
 <%= @user.nickname + " さんの ワインショップ"%>
-
+<div>
 <table class="table-striped">
 <tbody>
 <tr>
@@ -35,7 +35,7 @@
 <tr>
 <th class="detail-item">注力産地</th>
 <td class="detail-value">
-<% if Profile.where(user_id: @user.id).exists? %>
+<% if Profile.where(user_id: @user.id).exists?  %>
 <%= @user.profile.country.name %>
 <% else %>
 <%= "---" %>
@@ -54,3 +54,30 @@
 </tr>
 </tbody>
 </table>
+</div>
+
+<div>
+<% if current_user.id == @user.id  %>
+<% if Profile.where(user_id: @user.id).exists? %>
+<%= link_to "プロフィールの編集", edit_user_profile_path(@user.id, @user.profile.id), method: :get, class: "post-red-btn" %>
+<% else %>
+<%= link_to "プロフィールの入力", new_user_profile_path(@user.id), method: :get, class: "post-red-btn"%>
+<% end %>
+</div>
+<% end %>
+
+<div>
+<%= @user.nickname + " さんの 投稿一覧"%>
+</div>
+<div>
+<% @posts.each do |post| %>
+<%= link_to image_tag(post.image, class: :card__img ), post_path(post.id)%>
+  <div class="card__body">
+    <%= link_to post.title, post_path(post.id), class: :card__title%>
+    <p class="card__summary">
+      <%= post.genre.name %>
+      <%= post.created_at.strftime('%Y/%m/%d')%>
+    </p>
+      </div>
+      </div>
+<% end %>
