--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -57,6 +57,16 @@
 </div>
 
 <div>
+<% if current_user.id != @user.id %>
+<% if @user.followed_by?(current_user) %>
+<%=link_to "フォロー中", user_relationships_path(@user.id),class: "btn" , method: :delete %>
+<% else %>
+<%=link_to "フォローする", user_relationships_path(@user.id),class: "btn" ,method: :post %>
+<% end %>
+<% end %>
+</div>
+
+<div>
 <% if current_user.id == @user.id  %>
 <% if Profile.where(user_id: @user.id).exists? %>
 <%= link_to "プロフィールの編集", edit_user_profile_path(@user.id, @user.profile.id), method: :get, class: "post-red-btn" %>
