--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -59,9 +59,9 @@
 <div>
 <% if current_user.id != @user.id %>
 <% if @user.followed_by?(current_user) %>
-<%=link_to "フォロー中", user_relationships_path(@user.id),class: "btn" , method: :delete %>
+<%=link_to "フォロー中", user_relationships_path(@user.id),class: "btn-success" , method: :delete %>
 <% else %>
-<%=link_to "フォローする", user_relationships_path(@user.id),class: "btn" ,method: :post %>
+<%=link_to "フォローする", user_relationships_path(@user.id),class: "btn-primary" ,method: :post %>
 <% end %>
 <% end %>
 </div>
