--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -57,11 +57,11 @@
 </div>
 
 <div>
-<% if current_user.id != @user.id %>
+<% if current_user != @user %>
 <% if @user.followed_by?(current_user) %>
-<%=link_to "フォロー中", user_relationships_path(@user.id),class: "btn-success" , method: :delete %>
+<%=link_to "フォロー中", user_relationships_path(@user.id),class: "btn btn-outline-success" , method: :delete %>
 <% else %>
-<%=link_to "フォローする", user_relationships_path(@user.id),class: "btn-primary" ,method: :post %>
+<%=link_to "フォローする", user_relationships_path(@user.id),class: "btn btn-primary" ,method: :post %>
 <% end %>
 <% end %>
 </div>
