--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -27,7 +27,9 @@
     <% end %>
     </div>
 <div>
+    <% if current_user != @post.user %>
     <%= render 'post', post: @post %>
+    <% end %>
 </div>
 
     <table class="table-striped">
