--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,6 @@
 <%= render "shared/header"%>
 
-<div class="category bg-success">今売れてます</div>
+<div class="category bg-success"><%= link_to "今売れてます", posts_index_hot_path %></div>
   <% @post1.each do |post| %>
     <div class="post-index-item mb-20">
       <% if post.image.attached? %>
@@ -12,7 +12,7 @@
     </div>
   <% end %>
 
-  <div class="category bg-warning">次のシーズンで注力</div>
+  <div class="category bg-warning"><%= link_to "次のシーズンで注力", posts_index_next_path %></div>
   <% @post2.each do |post| %>
     <div class="post-index-item mb-20">
       <% if post.image.attached? %>
@@ -24,7 +24,7 @@
     </div>
   <% end %>
 
-      <div class="category bg-info">探してます</div>
+      <div class="category bg-info"><%= link_to "探してます", posts_index_wanted_path %></div>
      <% @post3.each do |post| %>
       <div class="post-index-item mb-20">
       <% if post.image.attached? %>
