--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,13 +3,12 @@
 <body>
 <div class="wrapper" >
 <div class="container-fluid img-hidden">
-<img src="/images/index.jpg" class="img-fluid">
+<img src="/images/index6.jpg" class="img-fluid">
 </div>
 <div class="index-message text-center">
 『WINE SHOP CLUB』はワイン小売業者間で“現場の声”を共有するサイトです。<br>
 『今売れてます』『次のシーズンで注力』『探してます』の三つのジャンルでワインに関する情報を投稿できます。<br>
 店頭販促や仕入れの計画にお役立てください。
-
 </div>
 
 <div class="container">
