アプリ名のフォント変更

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -6,7 +6,7 @@
 <img src="/images/index6.jpg" class="img-fluid">
 </div>
 <div class="index-message text-center">
-『WINE SHOP CLUB』はワイン小売業者間で“現場の声”を共有するサイトです。<br>
+『<span class="app-title">WINE SHOP CLUB</span>』はワイン小売業者間で“現場の声”を共有するサイトです。<br>
 『今売れてます』『次のシーズンで注力』『探してます』の三つのジャンルでワインに関する情報を投稿できます。<br>
 店頭販促や仕入れの計画にお役立てください。
 </div>
