--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,1 +1,1 @@
-<footer class="footer text-center bg-light"> ©️ 2023 WINE SHOP CLUB</footer>
+<footer class="footer text-center bg-light"> ©️ 2023 <span class="app-title">WINE SHOP CLUB</span></footer>
