--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,4 +1,15 @@
+/*header*/
+
+.navbar-brand {
+  font-family: 'Itim', cursive;
+}
+
+
 /* post-index */
+
+.app-title {
+  font-family: 'Itim', cursive;
+}
 
 .img-hidden {
   height: 300px;
