--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,3 +1,4 @@
+<link href='https://fonts.googleapis.com/css2?family=Itim&display=swap' rel="stylesheet">
 <body>
 <nav class="navbar navbar-expand-lg navbar- bg-light">
   <div class="container-fluid">
