--- a/app/assets/stylesheets/new.css
+++ b/app/assets/stylesheets/new.css
@@ -1,4 +1,5 @@
 .outer-content{
+  margin-top: 20px;
   text-align: center;
 }
 .inner-content{
@@ -21,6 +22,7 @@
   font-weight: bold;
   min-width: 170px;
   margin-bottom: 10px;
+  margin-top:10px;
 }
 
 .select-box {
@@ -31,17 +33,16 @@
 }
 
 .img-upload {
-  display: flex;
-  justify-content: space-between;
   flex-wrap: wrap;
   padding: 2vh 0;
 }
 
 .click-upload {
-  margin: 15px 0;
   min-width: 250px;
 }
 
-.click-upload>p {
-  margin-bottom: 15px;
+.new-submit {
+  margin: 20px 0;
+  text-align: center;
 }
+
