--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -47,7 +47,6 @@
   margin-top: 20px;
 }
 
-
 .container-s{
   margin-top: 25px;
 }
@@ -102,3 +101,49 @@
 }
 
 /*post-new*/
+.outer-content{
+  margin-top: 20px;
+  text-align: center;
+}
+.inner-content{
+  display: inline-block;
+  text-align: left;
+}
+
+.indispensable {
+  background: #ea352d;
+  margin-left: 8px;
+  padding: 3px;
+  border-radius: 2px;
+  color: #fff;
+  font-size: 12px;
+  font-weight: bold;
+}
+
+.bold-text {
+  font-weight: bold;
+  min-width: 170px;
+  margin-bottom: 10px;
+  margin-top:10px;
+}
+
+.select-box {
+  height: 30px;
+  width: 100%;
+  background-color: #f5f5f5;
+  padding-left: 20px;
+}
+
+.img-upload {
+  flex-wrap: wrap;
+  padding: 2vh 0;
+}
+
+.click-upload {
+  min-width: 250px;
+}
+
+.new-submit {
+  margin: 20px 0;
+  text-align: center;
+}
