--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,6 +1,19 @@
-<%= @user.nickname + " さんの ワインショップ"%>
-<div>
-<table class="table-striped">
+<%= render "shared/header"%>
+<body>
+<div class="profile-show-wrapper">
+  <div class="profile-show-top text-center">
+   <h1><b><%="#{@user.nickname}さんのページ" %></b></h1>
+  </div>
+
+<div class="container">
+<div class="row">
+<div class="col-md-6">
+<% if current_user == @user %>
+<span style="font-size:150%">ワインショップ情報</span>
+<% else %>
+<%= @user.nickname + " さんの ワインショップ情報"%>
+<% end %>
+<table class="table-striped", style="width: 80%">
 <tbody>
 <tr>
 <th class="detail-item">店名</th>
@@ -54,9 +67,20 @@
 </tr>
 </tbody>
 </table>
-</div>
 
-<div>
+<span class="profile-buttons">
+<% if Profile.where(user_id: @user.id).exists? %>
+<%= button_to "ショップ情報の編集", edit_user_profile_path(@user.id, @user.profile.id), method: :get, class: "btn btn-primary" %>
+<% else %>
+<%= button_to "ショップ情報の入力", new_user_profile_path(@user.id), method: :get, class: "btn btn-primary"%>
+<% end %>
+</span>
+
+
+
+
+
+
 <% if current_user != @user %>
 <% if @user.followed_by?(current_user) %>
 <%=link_to "フォロー中", user_relationships_path(@user.id),class: "btn btn-outline-success" , method: :delete %>
@@ -73,28 +97,34 @@
 <% end %>
 </div>
 
-<div>
-<% if current_user.id == @user.id  %>
-<% if Profile.where(user_id: @user.id).exists? %>
-<%= link_to "プロフィールの編集", edit_user_profile_path(@user.id, @user.profile.id), method: :get, class: "post-red-btn" %>
-<% else %>
-<%= link_to "プロフィールの入力", new_user_profile_path(@user.id), method: :get, class: "post-red-btn"%>
-<% end %>
+<div class="col-md-6">
+  <div class="container container-posts">
+  <% if current_user == @user %>
+  <span style="font-size:150%">投稿一覧</span>
+  <% else %>
+  <%= @user.nickname + " さんの投稿一覧"%>
+  <% end %>
+    <div class="row row-cols-2">
+        <% @posts.each do |post| %>
+          <div class="card">
+          <% if post.image.attached? %>
+          <%= image_tag post.image, class: "index-img d-block mx-auto" %>
+          <% else %>
+          <img class="index-img d-block mx-auto" src="<%= "/images/test_sample.png" %>" alt="Index image cap">
+          <% end %>
+          <div class="card-body">
+          <h5 class="card-title"><%=post.title %></h5>
+          <p class="card-text">投稿日：<%=post.created_at.strftime('%Y/%m/%d') %></p>
+            <div class="text-center">
+            <a href=<%=post_path(post.id)%> class="btn btn-secondary">この投稿を見る</a>
+            </div>
+          </div>
+          </div>
+        <% end %>
+    </div>
+  </div>
 </div>
-<% end %>
-
-<div>
-<%= @user.nickname + " さんの 投稿一覧"%>
 </div>
-<div>
-<% @posts.each do |post| %>
-<%= link_to image_tag(post.image, class: :card__img ), post_path(post.id)%>
-  <div class="card__body">
-    <%= link_to post.title, post_path(post.id), class: :card__title%>
-    <p class="card__summary">
-      <%= post.genre.name %>
-      <%= post.created_at.strftime('%Y/%m/%d')%>
-    </p>
-      </div>
-      </div>
-<% end %>
+</div>
+</div>
+</body>
