--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -45,7 +45,7 @@
           <a class="nav-link active" aria-current="page" href="/users/sign_in">ログイン</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/user/sign_up">新規登録</a>
+          <a class="nav-link" href="<%=new_user_registration_path%>">新規登録</a>
         </li>
         </ul>
     <% end %>
