--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,46 +1,50 @@
+<link href='https://fonts.googleapis.com/css2?family=Itim&display=swap' rel="stylesheet">
+<div class='registration-main'>
 <%= form_with model: @user, url: user_registration_path, class: 'registration-main', local: true do |f| %>
 <div class='form-wrap'>
   <div class='form-header'>
-    <h1 class='form-header-text'>
+  <span><%= link_to 'WINE SHOP CLUB', root_path, class:'form-header-appname' %> </span><br>
+    <span class='form-header-text'>
       新規会員登録
-    </h1>
+    </span>
   </div>
 
   <%= render 'shared/error_messages', model: f.object %>
 
   <div class="form-group">
     <div class='form-text-wrap'>
-      <label class="form-text">ニックネーム</label>
+      <label class="bold-text">ニックネーム</label>
       <span class="indispensable">必須</span>
     </div>
-    <%= f.text_area :nickname, class:"input-default", id:"nickname", placeholder:"例) ワイン太郎", maxlength:"10" %>
+    <%= f.text_field :nickname, class:"form-control input-lg col-lg-5", placeholder:"例) ワイン太郎", maxlength:"10", autofocus: true %>
   </div>
   <div class="form-group">
     <div class='form-text-wrap'>
-      <label class="form-text">メールアドレス</label>
+      <label class="bold-text">メールアドレス</label>
       <span class="indispensable">必須</span>
     </div>
-    <%= f.email_field :email, class:"input-default", id:"email", placeholder:"PC・携帯どちらでも可", autofocus: true %>
+    <%= f.email_field :email, class:"form-control input-lg col-lg-5", placeholder:"PC・携帯どちらでも可" %>
   </div>
   <div class="form-group">
     <div class='form-text-wrap'>
-      <label class="form-text">パスワード</label>
+      <label class="bold-text">パスワード</label>
       <span class="indispensable">必須</span>
     </div>
-    <%= f.password_field :password, class:"input-default", id:"password", placeholder:"6文字以上の半角英数字" %>
-    <p class='info-text'>※英字と数字の両方を含めて設定してください</p>
+    <%= f.password_field :password, class:"form-control input-lg col-lg-5", placeholder:"6文字以上の半角英数字" %>
+    <p class='form-text'>※英字と数字の両方を含めて設定してください</p>
   </div>
   <div class="form-group">
     <div class='form-text-wrap'>
-      <label class="form-text">パスワード(確認)</label>
+      <label class="bold-text">パスワード(確認)</label>
       <span class="indispensable">必須</span>
     </div>
-    <%= f.password_field :password_confirmation, class:"input-default", id:"password-confirmation", placeholder:"同じパスワードを入力して下さい" %>
+    <%= f.password_field :password_confirmation,class:"form-control input-lg col-lg-5", placeholder:"同じパスワードを入力して下さい" %>
   </div>
 
   <div class='register-btn'>
-    <%= f.submit "会員登録" ,class:"register-red-btn" %>
+    <%= f.submit "会員登録" ,class: "btn btn-primary btn-lg" %>
   </div>
 </div>
 <% end %>
+</div>
 
