--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -116,23 +116,21 @@
     </div>
 
   <div class="comment-container">
+  <div id="comments">
      <div >
       <h4>＜コメント一覧＞</h4>
-      <% if @comments.empty? %>
-      <strong><p>※※※ まだコメントは投稿されていません ※※※</p></strong>
-      <% else %>
       <% @comments.each do |comment| %>
         <p>
           <strong><%= link_to comment.user.nickname, user_profiles_path(comment.user.id), class: "link-name" %>：</strong>
           <%= comment.text %>
         </p>
         <% end %>
-      <% end %>
+      </div>
     </div>
 
-    <div class="comment-form">
+    <div class="form-group comment-form">
       <% if user_signed_in? %>
-      <%= form_with model: [@post, @comment] do |form| %>
+      <%= form_with model: [@post, @comment], id: "comment-form" do |form| %>
       <!--コメント欄-->
         <%= form.text_area :text, class: "form-control input-md col-md-5" %><br>
         <%= form.submit "コメントを投稿する", class: "btn btn-primary btn-lg" %>
