--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -9,9 +9,11 @@
     <% if user_signed_in? %>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+      <% unless current_page?("/users/#{current_user.id}/profiles")%>
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="/users/<%= current_user.id %>/profiles">マイページ</a>
         </li>
+        <% end %>
         <li class="nav-item">
           <a class="nav-link" href="/posts/new">新規投稿</a>
         </li>
