--- a/app/views/posts/next.html.erb
+++ b/app/views/posts/next.html.erb
@@ -1,6 +1,5 @@
 <%= render "shared/header"%>
 
-<body>
 <div class="wrapper" >
 <div class="container-fluid img-hidden">
 <img src="/images/next.jpg" class="img-fluid">
@@ -10,8 +9,7 @@
 仕入れの計画にお役立てください。
 </div>
 
-<div class="container">
-  <div class="container-w">
+<div class="container container-w">
   <div class="index-category">
   <div class="left"><span style="font-size:180%"><b>次のシーズンで注力  </b></span>のすべての投稿 </div>
   </div>
@@ -37,8 +35,7 @@
 <% end %>
 </div>
 </div>
-<div>
-  </div>
-  </body>
+
+
 
 <%= render "shared/footer"%>
