--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,1 +1,3 @@
+<div class="container-fluid">
 <footer class="footer text-center bg-light"> ©️ 2023 <span class="app-title">WINE SHOP CLUB</span></footer>
+</div>
