--- a/app/views/posts/wanted.html.erb
+++ b/app/views/posts/wanted.html.erb
@@ -1,6 +1,5 @@
 <%= render "shared/header"%>
 
-<body>
 <div class="wrapper" >
 <div class="container-fluid img-hidden">
 <img src="/images/wanted.jpg" class="img-fluid">
@@ -9,8 +8,7 @@
 『探してます』ジャンルでは、多様な切り口でワインを探すための情報交換を目的としています。<br>
 </div>
 
-<div class="container">
-  <div class="container-w">
+<div class="container container-w">
   <div class="index-category">
   <div class="left"><span style="font-size:180%"><b>探してます  </b></span>のすべての投稿 </div>
   </div>
@@ -36,8 +34,6 @@
 <% end %>
 </div>
 </div>
-<div>
-  </div>
-  </body>
+
 
 <%= render "shared/footer"%>
